# darkelf

./: .gitignore  Cargo.toml  DCStorage.db  DEBUG_NEXT_MISMATCH.md  DMX_ANALYSIS.md  HELIOS_SETUP.md  README.md  ajut.rs  app-service-beautified.js  blemodule.js  build.rs  c4ce.js  check_output.txt  darkelf_coordinates.json  device.txt  encodedcommanddata.json  example_draw_config.json  example_points.json  jooned.json  js_output.txt  laserimoodul.txt  links.txt  loogika.js  package-lock.json  package.json  proto.txt  rust_output.txt  segment_points.json  segment_points.txt  server.js  settings.js  temp_placeholder.txt  test.rs  test_glyphs_output.json  ufos.json  uurimiseks.js
assets/: mudel2.txt  readme.txt
assets/fixtures/: laser_light_7D66_16ch.json  laser_light_7D66_20ch.json  laser_light_8340.json
btlog/: menyysession.txt  menyysession3.txt  test1.pcapng  test1arrays.c  test2.c  test3.txt  test5.txt  verdict1.txt
dac/: Cargo.toml  README.md  instructions.md
dac/.cargo/: config.toml
dac/circuit/: ADUM1401BRWZ.kicad_sym  ADUM1401BRWZ.step  CONV_RS-0512D.kicad_mod  RS-0512D.kicad_sym  RS-0512D.step  SOIC127P1032X265-16N.kicad_mod  SOIC127P600X175-14N.kicad_mod  TL074BCDT.kicad_sym
dac/circuit/dac/: #auto_saved_files#  dac.kicad_prl  dac.kicad_pro  dac.kicad_sch  dac1.net  ~dac.kicad_sch.lck
dac/src/: main.rs
katsetused/: _ble.rs  ble.rs  ble_provider.rs  ble_provider_demo.rs  bleadapter.rs  bledemo.rs  bletest.rs  controller.rs  laser1.rs  laser2.rs  laser3.rs  laser4.rs  laser_test.rs  main.rs  settings.rs  test.rs  test10.rs  test2.rs  test4.rs  test6.rs  test7.rs  test8.rs  test9.rs  testtoggle.rs  winble.rs
katsetused/win_device_controller/: Cargo.toml
katsetused/win_device_controller/src/: lib.rs  tests.rs
logs/: capture_dmx.pcap
refactor target/: 0b2a.js  28e3.js  5a85.js  app-service-meanified.js  app-service-meanified.md  app-service-minimal.js  app-service.js  app_state_manager.rs  ble_device_project_config_page.rs  blue.rs  codepointAt.js  command.rs  controller.rs  device_config_page_controller.rs  e458.js  example.js  example.rs  laseer2.txt  laser2.rs  main_page_component.rs  model.rs  motes.md  notes.md  o95b.js  picArrayShapes.js  refactor rtemp.txt  settings2.rs  uni.js  unifiedmodule.js  winble refactor.txt  winble2.rs
sa0200/: sa0200adb.inf  sa0200adb86.cat  sa0200adba64.cat
scripts/: DCStorage-journal.js  DCStorage.db  FontGeometryUtil.js  app-service-meanified.js  app-service-minimal.js  darkelf.json  darkelf_coordinates.json  deviceCommandUtils.js  drawPicArrayShapes.js  drawPicArrayShapesHtml.js  encodedCommandData.json  generateSegmentedLayoutData.json  getXysCmdArr.txt  hex_diff.py  ilda.md  index.html  jooned.json  kaksjoont.json  lill.json  lineShapes.json  package-lock.json  package.json  picArrayShapes.json  ruut.json  ruut_utf8.json  segment_points.json  server.js  shapePatterTemplates.js  shapePatternTemplates.json  test_glyphs_output.html  test_glyphs_output.json  textCoordinates.json  textLines.json  ufo.json  ufos.json
src/: ble.rs  blelib.rs  blue.rs  bluedevice.rs  blueprotocol.rs  command.rs  constants.rs  controller.rs  device.rs  dmx.rs  dmxchannel.rs  dmxdevice.rs  dmxliterals.rs  draw.rs  heliosdac.rs  ilda.rs  laser.rs  laser_refactored.rs  lib.rs  mock.rs  model.rs  winble.rs  winblue.rs
src/blue/: bluedevice.rs  blueprotocol.rs  device.rs  draw.rs  mod.rs  model.rs  winblue.rs
src/dac/: README.md  helios.rs
src/devices/: ZQ03268.rs  mod.rs
src/dmx/: controller.rs  device.rs  laser_light_8340.rs  literals.rs  mod.rs  model.rs
src/ilda/: builder.rs  mod.rs  model.rs  reader.rs  writer.rs
src/ui/: app.rs  buttons.rs  console.rs  dmx.rs  (+9 more)
tests/: basic_test.rs  bleconnect.rs  blecontroller.rs  bluedevicetest.rs  btleplug.rs  command_test.rs  commandtests.rs  devicetest.rs  dmx_specification_test.rs  dmx_specification_test2.rs  dmxdevicetest.rs  drawtest.rs  gylphtest.rs  helios_25fps_timed.rs  helios_dna_test.rs  helios_example.rs  helios_example_csharp_style.rs  helios_galvo_test.rs  helios_ilda_test.rs  helios_max_points_25fps.rs  helios_minimal.rs  helios_test6_deep_dive.rs  ilda.rs  settings.rs  test.rs  test3.rs  test5.rs  test_dmx_device.rs  utils.rs  winconnect.rs
(+7 files in other folders)
