[package]
name = "darkelf"
version = "0.1.0"
edition = "2024"

[dependencies]
# The btleplug crate for cross-platform Bluetooth functionality
btleplug = "0.11.8"
tokio = { version = "1.38", features = ["full"] }
uuid = "1.8"

# The futures crate, needed for the StreamExt trait
futures = "0.3"
pretty_env_logger = "0.5.0"
term-painter = "0.3.0"
anyhow = "1.0.99"
tokio-stream = "0.1.17"
log = "0.4.28"
windows = { version = "0.61.3", features = [
    "Devices_Bluetooth", 
    "Devices_Bluetooth_GenericAttributeProfile", 
    "Devices_Enumeration",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections"
] }
hex = "0.4.3"
serialport = "4.7.3"
regex = "1.11.2"
memchr = "2.7.5"
bluest = "0.6.9"
rand = "0.9.2"
eframe = "0.33"
egui_extras = "0.33.0"
egui_taffy = "0.10"
egui = "0.33"
lyon_tessellation = "=1.0.16"
lyon_algorithms = "=1.0.16"

ttf-parser = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"


