[package]
name = "darkelf"
version = "0.1.0"
edition = "2024"

[dependencies]
# The btleplug crate for cross-platform Bluetooth functionality
btleplug = "0.11.8"
tokio = { version = "1.38", features = ["full"] }
uuid = { version = "1.8", features = ["v4"] }

# The futures crate, needed for the StreamExt trait
futures = "0.3"
pretty_env_logger = "0.5.0"
term-painter = "0.3.0"
anyhow = "1.0.99"
tokio-stream = "0.1.17"
log = "0.4.28"
windows = { version = "0.61.3", features = [
    "Devices_Bluetooth", 
    "Devices_Bluetooth_GenericAttributeProfile", 
    "Devices_Enumeration",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections"
] }
hex = "0.4.3"
serialport = "4.7.3"
regex = "1.11.2"
memchr = "2.7.5"
libloading = "0.8"
bluest = "0.6.9"
rand = "0.9.2"
eframe = "0.33"
egui_extras = "0.33.0"
egui_taffy = "0.10"
egui = "0.33"
lyon  = "=1.0.16"
image = "0.24"

ttf-parser = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# For SVG rendering
resvg = { version = "0.45.1"}
tiny-skia = "0.11.4"

# MCP (Model Context Protocol) dependencies
rmcp = { version = "0.8.5", features = ["macros", "server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.0"
tokio-util = "0.7"




