[package]
name = "dac"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
rp2040-hal = { version = "0.9", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
panic-halt = "0.2"

# Optional but useful
defmt = "0.3"
defmt-rtt = "0.4"

[profile.dev]
debug = 1
opt-level = "z"

[profile.release]
debug = 1
opt-level = "z"
lto = true
