[package]
name = "win_device_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Enumeration",
    "Foundation",
    "Storage_Streams",
] }
tokio = { version = "1.29", features = ["full"] }
hex = "0.4"
log = "0.4"
thiserror = "1.0"